# mage-legacy

Documentation/html/: _constants_8h.html  _constants_8h_source.html  _distribution_8h.html  _distribution_8h_source.html  _frame_8h.html  _frame_8h_source.html  _frame_queue_8cpp.html  _frame_queue_8h.html  _frame_queue_8h_source.html  _label_8cpp.html  _label_8h.html  _label_8h_source.html  _label_queue_8cpp.html  _label_queue_8h.html  _label_queue_8h_source.html  _m_s_distribution_8h_source.html  _math_functions_8cpp.html  _math_functions_8h.html  _math_functions_8h_source.html  _mem_queue_8h.html  _mem_queue_8h_source.html  _model_8cpp.html  _model_8h.html  _model_8h_source.html  _model_queue_8cpp.html  _model_queue_8h.html  _model_queue_8h_source.html  _state_8h.html  _state_8h_source.html  _vocoder_8cpp.html  _vocoder_8h.html  _vocoder_8h_source.html  annotated.html  bug.html  class_m_a_g_e_1_1_engine-members.html  class_m_a_g_e_1_1_engine.html  class_m_a_g_e_1_1_frame_queue-members.html  class_m_a_g_e_1_1_frame_queue.html  class_m_a_g_e_1_1_label-members.html  class_m_a_g_e_1_1_label.html  (+52 more)
Documentation/latex/: _constants_8h.tex  _distribution_8h.tex  _frame_8h.tex  _frame_queue_8cpp.tex  _frame_queue_8h.tex  _label_8cpp.tex  _label_8h.tex  _label_queue_8cpp.tex  _label_queue_8h.tex  _math_functions_8cpp.tex  _math_functions_8h.tex  _mem_queue_8h.tex  _model_8cpp.tex  _model_8h.tex  _model_queue_8cpp.tex  _model_queue_8h.tex  _state_8h.tex  _vocoder_8cpp.tex  _vocoder_8h.tex  annotated.tex  bug.tex  class_m_a_g_e_1_1_engine.tex  class_m_a_g_e_1_1_frame_queue.eps  class_m_a_g_e_1_1_frame_queue.tex  class_m_a_g_e_1_1_label.tex  class_m_a_g_e_1_1_label_memory.tex  class_m_a_g_e_1_1_label_queue.tex  class_m_a_g_e_1_1_mage.tex  class_m_a_g_e_1_1_mem_queue.tex  class_m_a_g_e_1_1_model.tex  class_m_a_g_e_1_1_model_memory.tex  class_m_a_g_e_1_1_model_queue.eps  class_m_a_g_e_1_1_model_queue.tex  class_m_a_g_e_1_1_model_queue_memory.tex  class_m_a_g_e_1_1_vocoder.tex  dir_1f41c972a5aa1bdbe04671a22d0db693.tex  dir_9da7358cdf22ee83ae3f642224670865.tex  dir_d4540342f64026dee9b8d63263476335.tex  dir_d522931ffa1371640980b621734a4381.tex  dir_d7a1979bcd88512e78acc35f27dcd0c1.tex  (+18 more)
examples/of_0071_linux_release/apps/: enterface12-script.sh
examples/of_0071_linux_release/apps/enterface2012/: genThread.cpp  genThread.h  testApp.cpp  testApp.h
examples/of_0071_linux_release/apps/memorytest/: CMakeLists.txt  main.cpp
examples/of_0071_linux_release/apps/ofxosc/: CMakeLists.txt
examples/of_0071_osx_release/apps/enterface12/mage2.00/: openFrameworks-Info.plist  osc.maxpat  osc.pd
examples/of_0071_osx_release/apps/enterface12/mage2.00/inouts/: awb.conf  bdl.conf  clb.conf  configBDL.conf  jmk.conf  rms.conf  slt.conf
examples/of_0071_osx_release/apps/enterface12/mage2.00/mage2.00.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
examples/of_0071_osx_release/apps/enterface12/mage2.00/mage2.00.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/of_0071_osx_release/apps/enterface12/mageOsc/mageOsc.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
examples/of_0071_osx_release/apps/enterface12/mageOsc/mageOsc.xcodeproj/project.xcworkspace/xcuserdata/kyojindo.xcuserdatad/: UserInterfaceState.xcuserstate
examples/of_0071_osx_release/apps/enterface12/mageOsc/mageOsc.xcodeproj/xcshareddata/xcschemes/: mageOsc.xcscheme
examples/of_0071_osx_release/apps/enterface12/mageOsc/mageOsc.xcodeproj/xcuserdata/kyojindo.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/of_0071_osx_release/libs/openFrameworks/app/: ofBaseApp.h
examples/of_0071_osx_release/libs/openFrameworksCompiled/project/osx/openFrameworksLib.xcodeproj/: project.pbxproj
examples/of_0071_osx_release/libs/openFrameworksCompiled/project/osx/openFrameworksLib.xcodeproj/project.xcworkspace/xcuserdata/kyojindo.xcuserdatad/: UserInterfaceState.xcuserstate
magelib-2.00/libs/olabox-0.01/: CMakeLists.txt  obOlaBuffer.cpp  obOlaBuffer.h
magelib-2.00/pd/: mage~.cpp
magelib-2.00/pd/pd_xcodeProject/Mage2.00_pd.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
