SET(MAGE_GIT_PATH "${CMAKE_SOURCE_DIR}/../../..")
#SET(MAGE_GIT_PATH "../../../..")
SET(HTS_ENGINE_ROOT_PATH "${MAGE_GIT_PATH}/magelib-2.00/libs/hts_engine-1.06")
SET(MAGE_ROOT_PATH "${MAGE_GIT_PATH}/magelib-2.00/src")
SET(MAGELIBS_PATH "${MAGE_GIT_PATH}/magelib-2.00/bin")
SET(OB_ROOT_PATH "${MAGE_GIT_PATH}/magelib-2.00/libs/olabox-0.01")
SET(PORTAUDIO_ROOT_PATH "${MAGE_GIT_PATH}/magelib-2.00/libs/portaudio-0.19")

SET(APP_NAME memorytest)

FILE(GLOB SRC ${SRC} *.cpp *.c)
FILE(GLOB HDR ${HDR} *.hpp *.h)

INCLUDE_DIRECTORIES(${HTS_ENGINE_ROOT_PATH})
INCLUDE_DIRECTORIES(${MAGE_ROOT_PATH})
INCLUDE_DIRECTORIES(${OB_ROOT_PATH})
INCLUDE_DIRECTORIES(${PORTAUDIO_ROOT_PATH})

LINK_DIRECTORIES(${MAGELIBS_PATH})

ADD_EXECUTABLE(${APP_NAME} ${SRC} ${HDR})
TARGET_LINK_LIBRARIES(${APP_NAME} pthread m)
TARGET_LINK_LIBRARIES(${APP_NAME} mage htsengine olabox)

TARGET_LINK_LIBRARIES(${APP_NAME} portaudio)
TARGET_LINK_LIBRARIES(${APP_NAME} jack)

